--- a/src/_includes/style/main.css
+++ b/src/_includes/style/main.css
@@ -9,5 +9,8 @@ img {
 }
 
 img[src*="character"] {
-    height: 100px;
+    width: 300px;
+    height: 200px;
+    object-fit: contain;
+    object-position: center;
 }
