--- a/src/_includes/style/main.css
+++ b/src/_includes/style/main.css
@@ -1,5 +1,5 @@
 body {
-    max-width: 50rem;
+    max-width: 650px;
     margin: 0 auto;
     font-family: Courier, Courier Prime, Courier New, monospace;
 }
@@ -9,8 +9,8 @@ img {
 }
 
 img[src*="character"] {
-    width: 300px;
-    height: 200px;
+    max-height: 250px;
+    max-width: 300px;
     object-fit: contain;
     object-position: center;
 }
