--- a/src/_includes/style/main.css
+++ b/src/_includes/style/main.css
@@ -25,8 +25,15 @@ img[src*="character"] {
     object-fit: contain;
     object-position: right;
 }
+
+/* STUPID HACK: if it's vriska, put her on the left */
 img[src*="character"][src*="vriska"] {
     object-position: left;
+}
+
+/* STUPID HACK: if it's Jasprosprite, flip her 180deg. */
+img[src*="character"][src*="jasprose"] {
+    transform: scaleX(-1.0);
 }
 
 @media screen and (min-width: 1500px) {   
