--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -2,6 +2,7 @@
 ---
 <!DOCTYPE html>
 {% set css %}
+{% include 'style/fonts.css'%}
 {% include 'style/main.css'%}
 {% include 'style/quirks.css'%} {% endset%}
 <title>{{ title }}</title>
