--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -4,7 +4,9 @@
 {% set css %}
 {% include 'style/fonts.css'%}
 {% include 'style/main.css'%}
-{% include 'style/quirks.css'%} {% endset%}
+{% include 'style/quirks.css'%}
+{% include 'style/beach.css'%}
+{% endset%}
 <title>{{ title }}</title>
 <style>{{ css | safe }}</style>
 <main>{{ content | safe }}</main>
