--- a/src/_includes/style/quirks.css
+++ b/src/_includes/style/quirks.css
@@ -15,6 +15,7 @@
     --jasprosesprite: #b536da;
     --jasprosesprite-prefix: #ff6ef2;
     --vriska_paren: var(--mindmom);
+    --fefetasprite: #b536da;
 }
 
 .vriska {
@@ -73,4 +74,8 @@
 }
 .vriska_paren {
     color: var(--vriska_paren);
+}
+
+.fefetasprite {
+    color: var(--fefetasprite);
 }
