ch6: Add talksprites

--- a/src/_includes/style/main.css
+++ b/src/_includes/style/main.css
@@ -7,8 +7,7 @@
 
 body {
     max-width: 650px;
-    margin: 0 auto;
-
+    margin: 3rem auto;
     font: var(--font-primary);
     background-color: var(--bg-color);
     color: var(--fg-primary)
@@ -29,6 +28,10 @@ img[src*="character"] {
 /* STUPID HACK: if it's vriska, put her on the left */
 img[src*="character"][src*="vriska"] {
     object-position: left;
+}
+/* STUPIDER HACK: if it's pre-retcon vriska put on the left. */
+img[src*="character"][src*="vriska_paren"] {
+    object-position: right;
 }
 
 /* STUPID HACK: if it's Jasprosprite, flip her 180deg. */
@@ -97,4 +100,17 @@ h3, .command-box {
 h3::before {
     content: "> ";
     color: var(--fg-primary);
+}
+
+img[src*="fefetasprite_xc"] {
+    animation: dissolve_out 4s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+}
+
+@keyframes dissolve_out {
+    from { opacity: 1; }
+    20% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 0; }
 }
