refactor talksprite styles into own file

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -4,6 +4,7 @@
 {% set css %}
 {% include 'style/fonts.css'%}
 {% include 'style/main.css'%}
+{% include 'style/talksprites.css'%}
 {% include 'style/quirks.css'%}
 {% include 'style/beach.css'%}
 {% endset%}
