--- a/src/_includes/style/talksprites.css
+++ b/src/_includes/style/talksprites.css
@@ -58,7 +58,37 @@ img[src*="fefeta/xc"] {
     }
     60%, 100% {
         scale: -1 1;
-        translate: 50vw 0;
+        translate: 200% 0;
+    }
+}
+
+.vriska_escape {
+    scale: -1 1;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .vriska_escape {
+        animation-name: vriska_escape;
+        animation-duration: 4s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+    }
+    
+}
+
+@keyframes vriska_escape {
+    0%, 25% {
+        scale: 1 1;
+        translate: 0 0;
+    }
+    35%, 42.5% {
+        scale: -1 1;
+        translate: 0 0;
+    }
+    60%, 100% {
+        scale: -1 1;
+        translate: -200% 0;
     }
 }
 
@@ -69,16 +99,14 @@ img[src*="fefeta/xc"] {
 
 @media (prefers-reduced-motion: no-preference) {
     .vriska_shrink {
-        animation: ease-out 1.5s vriska_shrink infinite;
+        animation: ease-out 3s vriska_shrink infinite;
     }
 }
 
 @keyframes vriska_shrink {
-    from {
+    0%, 20% {
         scale: 1;
         opacity: 1;
-    }
-    50%, 100% {
     }
     80%, 100% {
         scale: 0;
