--- a/src/_includes/style/beach.css
+++ b/src/_includes/style/beach.css
@@ -15,6 +15,7 @@
     animation-name: horse;
     animation-duration: 50s;
     animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
 
 @keyframes horse {
